syntax = "proto3";


// PlacementEntry

service PlacementService {
    rpc getAllPlacementEntries(GetAllPlacementEntriesRequest) returns (GetAllPlacementEntriesResponse) {}
    rpc getPlacementEntryById(GetPlacementEntryByIdRequest) returns (GetPlacementEntryByIdResponse) {}
    rpc savePlacementEntry(SavePlacementEntryRequest) returns (SavePlacementEntryResponse) {}
    rpc updatePlacementEntry(UpdatePlacementEntryRequest) returns (UpdatePlacementEntryResponse) {}
    rpc deletePlacementEntry(DeletePlacementEntryRequest) returns (DeletePlacementEntryResponse) {}
}

message PlacementEntry {
    int64 studentId = 1;
    int64 companyId = 2;
    int32 year = 3;
    double LPA = 4;
    string createdAt = 5;
    string updatedAt = 6;
}
  
message GetAllPlacementEntriesRequest {

}

message GetAllPlacementEntriesResponse {
    repeated PlacementEntry placementEntries = 1;
}

message GetPlacementEntryByIdRequest {
    int64 studentId = 1;
}

message GetPlacementEntryByIdResponse {
    PlacementEntry placementEntry = 1;
}

message SavePlacementEntryRequest {
    PlacementEntry placementEntry = 1;
}

message SavePlacementEntryResponse {
    string message = 1;
}

message UpdatePlacementEntryRequest {
    PlacementEntry placementEntry = 1;
}

message UpdatePlacementEntryResponse {
    string message = 1;
}

message DeletePlacementEntryRequest {
    int64 studentId = 1;
}

message DeletePlacementEntryResponse {
    string message = 1;
}

// Company 

service CompanyService {
    rpc getAllCompanies(GetAllCompaniesRequest) returns (GetAllCompaniesResponse) {}
    rpc getCompanyById(GetCompanyByIdRequest) returns (GetCompanyByIdResponse) {}
    rpc saveCompany(SaveCompanyRequest) returns (SaveCompanyResponse) {}
    rpc updateCompany(UpdateCompanyRequest) returns (UpdateCompanyResponse) {}
    rpc deleteCompany(DeleteCompanyRequest) returns (DeleteCompanyResponse) {}
    rpc getPlacementDetails(GetPlacementDetailsRequest) returns (GetPlacementDetailsResponse) {}
}

message Company {
    int64 companyId = 1;
    string companyName = 2;
    string createdAt = 3;
    string updatedAt = 4;
}
  
message GetAllCompaniesRequest {

}

message GetAllCompaniesResponse {
    repeated Company companies = 1;
}

message GetCompanyByIdRequest {
    int64 companyId = 1;
}

message GetCompanyByIdResponse {
    Company company = 1;
}

message SaveCompanyRequest {
    Company company = 1;
}

message SaveCompanyResponse {
    string message = 1;
}

message UpdateCompanyRequest {
    Company company = 1;
}

message UpdateCompanyResponse {
    string message = 1;
}

message DeleteCompanyRequest {
    int64 companyId = 1;
}

message DeleteCompanyResponse {
    string message = 1;
}

message GetPlacementDetailsRequest {
    int64 companyId = 1;
}

message GetPlacementDetailsResponse {
    repeated PlacementEntry placementEntries = 1;
}
